# epub2anki

./: .gitignore  anki_words_list.csv  atomic.csv  atomic2.csv  extract_words.py  extract_words_with_sentences.py  extract_words_without_knowns.py  harry.csv  harry.epub  harry1.csv  knowns.csv  lingqs.csv  pyproject.toml  readme.md  requirements.txt  setup.py  step1.py  step2.py  ts.py  word_with_sentences.csv
